# data_analysis_hub

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: api-log-analyzer.md  bigquery-analyst.md  cohort-analyst.md  data-quality-checker.md  market-intelligence.md  report-automator.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  darwin_macos_utilities.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
database/: README.md
database/dim_member/: create_table.sql
database/dim_time/: create_table.sql
dm_business_planning/business_logic/: README.md
dm_business_planning/dim_company/: create_table.sql
dm_business_planning/dim_pipeline/: create_table.sql
dm_business_planning/dim_product/: create_table.sql
dm_business_planning/dim_revenue/: create_table.sql
notebooks/: SALES_TEAM_GUIDE.md  bigquery_nl_analysis_with_gemini.ipynb  sales_data_analyzer.ipynb
