[project]
name = "data-analysis-hub"
version = "0.1.0"
description = "Data Analysis Hub - CADDi製造業AIデータプラットフォームの経営戦略立案支援データ分析プロジェクト"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Data Processing
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0,<2.0.0", # pandas 2.1互換性のため
    "dask[complete]>=2023.12.0",
    # BigQuery & GCP
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-bigquery-storage>=2.22.0",
    "google-cloud-bigquery-connection>=1.15.0",
    "google-cloud-bigquery-reservation>=1.13.0",
    "google-cloud-bigquery-datatransfer>=3.11.0",
    "bigframes>=1.0.0", # pandas互換の分散処理API
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "pandas-gbq>=0.19.0",
    # Customer Analytics
    "lifetimes>=0.11.1",
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "imbalanced-learn>=0.11.0",
    # Time Series Forecasting
    "prophet>=1.1.5",
    "statsmodels>=0.14.0",
    "torch>=2.0.0",
    "pytorch-forecasting>=0.10.0",
    # Market Basket Analysis
    "mlxtend>=0.23.0",
    # Financial Analysis
    "quantstats>=0.0.62",
    "yfinance>=0.2.28",
    "ta>=0.11.0", # pandas-taの代わりにtaライブラリを使用
    # Visualization & Dashboards
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "dash>=2.18.0", # comm警告が修正された新しいバージョン
    "streamlit>=1.28.0",
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.0.0",
    # Data Quality
    "great-expectations>=1.2.0", # Marshmallow警告が修正されたバージョン
    "pandera>=0.17.0",
    # Database
    "sqlalchemy>=2.0.0",
    "pymongo>=4.5.0",
    "redis>=5.0.0",
    # API & Web
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    # Statistical Analysis
    "scipy>=1.11.0",
    "simple-salesforce>=1.12.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "ipykernel>=6.25.0",
]
